--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,26 +1,39 @@
-/* src/components/Header.css */
 .header {
-    position: fixed; /* Mantiene el header en la parte superior */
-    top: 0; /* Alinea el header en la parte superior de la página */
-    left: 0; /* Alinea el header a la izquierda */
-    right: 0; /* Alinea el header a la derecha */
-    z-index: 1000; /* Asegura que esté por encima de otros elementos */
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    max-height: 80px;
+    overflow: hidden;
+    display: flex;
+    justify-content: flex-start; /* Alinea el contenido a la izquierda */
+    align-items: center; /* Centra el contenido verticalmente */
+    padding-left: 20px; /* Añade un padding a la izquierda para mover el logo */
   }
-
-
+  
   .logo {
-    width: 90px; /* Cambia este valor al tamaño deseado */
-    height: auto; /* Mantiene la proporción de la imagen */
-    margin-bottom: 2px; /* Espacio entre el logo y el título */
+    width: 90px;
+    height: auto;
+    margin-right: 10px; /* Espacio a la derecha del logo */
   }
   
   
-  /* Puedes agregar padding-top al contenedor principal en App.jsx */
   .container {
-    padding-top: 150px; /* Ajusta este valor según la altura de tu header */
+    padding-top: 100px; /* Ajusta este valor según la altura de tu header */
   }
-
+  
   .custom-header {
     background-color: #007bff; /* Color primario de Bootstrap */
+  }
+  
+  h1 {
+    font-size: 1.5rem; /* Ajusta el tamaño del título */
+    margin: 0; /* Elimina el margen para evitar que se sume a la altura */
+  }
+  
+  p {
+    font-size: 0.9rem; /* Ajusta el tamaño del subtítulo */
+    margin: 0; /* Elimina el margen para evitar que se sume a la altura */
   }
   
